[package]
name = "variables"
version = "0.1.0"
authors = ["Irene Fabris"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Here are 2 brilliant resources to learn Rust:
# (1) The Rust Programming Language: http://web.mit.edu/rust-lang_v1.25/arch/amd64_ubuntu1404/share/doc/rust/html/book/first-edition/README.html a lenghty, yet the most comprehensive Rust guide
# (2) Rust By Example: https://doc.rust-lang.org/rust-by-example/index.html a quick, brief, and compact giude to learn by examples

[dependencies]
rand = "0.3"
subtle = "2.4"
near-sdk = "4.0.0-pre.4"         # sdk with functions to write smart contracts on NEAR Protocol blockchain
hex = "0.4.3"                    # encrypt and decrypt in hexadecimal representation
